generated/XalangParser.py
# Generated from ./Xalang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class XalangParser ( Parser ):

    grammarFileName = "Xalang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'['", "']'", "'='", "'AXXAAXAAAXAX_'", 
                     "'('", "')'", "'AAAAXA_'", "'{'", "'}'", "'AAXAAAAAAXA_'", 
                     "'AAXAAAAAA_'", "'AAXAXXXAXA_'", "'AXXAAAAAAAXAAA_'", 
                     "'-'", "'!'", "'~'", "'++'", "'--'", "'**'", "'*'", 
                     "'/'", "'%'", "'div'", "'+'", "'<<'", "'>>'", "'>'", 
                     "'<'", "'>='", "'<='", "'=='", "'!='", "'&'", "'^'", 
                     "'|'", "'&&'", "'^^'", "'||'", "'?'", "':'", "'*='", 
                     "'/='", "'%='", "'div='", "'+='", "'-='", "'&='", "'|='", 
                     "'^='", "'<<='", "'>>='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Ident", "IntLiteral", "BoolLiteral", 
                      "StringLiteral", "Semicolon", "Whitespace", "BlockComment", 
                      "LineComment" ]

    RULE_program = 0
    RULE_code_instruction = 1
    RULE_var_def = 2
    RULE_var_names = 3
    RULE_var_name_init = 4
    RULE_operator_rule = 5
    RULE_for_operators = 6
    RULE_for_operator = 7
    RULE_code_block = 8
    RULE_print_op = 9
    RULE_if_op = 10
    RULE_for_op = 11
    RULE_while_op = 12
    RULE_expression = 13
    RULE_literal = 14

    ruleNames =  [ "program", "code_instruction", "var_def", "var_names", 
                   "var_name_init", "operator_rule", "for_operators", "for_operator", 
                   "code_block", "print_op", "if_op", "for_op", "while_op", 
                   "expression", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    Ident=53
    IntLiteral=54
    BoolLiteral=55
    StringLiteral=56
    Semicolon=57
    Whitespace=58
    BlockComment=59
    LineComment=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(XalangParser.EOF, 0)

        def code_instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XalangParser.Code_instructionContext)
            else:
                return self.getTypedRuleContext(XalangParser.Code_instructionContext,i)


        def getRuleIndex(self):
            return XalangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = XalangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XalangParser.T__4) | (1 << XalangParser.T__5) | (1 << XalangParser.T__7) | (1 << XalangParser.T__12) | (1 << XalangParser.T__13) | (1 << XalangParser.T__14) | (1 << XalangParser.T__15) | (1 << XalangParser.T__16) | (1 << XalangParser.T__17) | (1 << XalangParser.T__18) | (1 << XalangParser.Ident) | (1 << XalangParser.IntLiteral) | (1 << XalangParser.BoolLiteral) | (1 << XalangParser.StringLiteral))) != 0):
                self.state = 30
                self.code_instruction()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(XalangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_instructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XalangParser.RULE_code_instruction

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Code_instruction_var_defContext(Code_instructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Code_instructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_def(self):
            return self.getTypedRuleContext(XalangParser.Var_defContext,0)

        def Semicolon(self):
            return self.getToken(XalangParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_instruction_var_def" ):
                listener.enterCode_instruction_var_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_instruction_var_def" ):
                listener.exitCode_instruction_var_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_instruction_var_def" ):
                return visitor.visitCode_instruction_var_def(self)
            else:
                return visitor.visitChildren(self)


    class Code_instruction_operatorContext(Code_instructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Code_instructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operator_rule(self):
            return self.getTypedRuleContext(XalangParser.Operator_ruleContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_instruction_operator" ):
                listener.enterCode_instruction_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_instruction_operator" ):
                listener.exitCode_instruction_operator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_instruction_operator" ):
                return visitor.visitCode_instruction_operator(self)
            else:
                return visitor.visitChildren(self)



    def code_instruction(self):

        localctx = XalangParser.Code_instructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code_instruction)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = XalangParser.Code_instruction_var_defContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.var_def()
                self.state = 39
                self.match(XalangParser.Semicolon)
                pass

            elif la_ == 2:
                localctx = XalangParser.Code_instruction_operatorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.operator_rule()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_names(self):
            return self.getTypedRuleContext(XalangParser.Var_namesContext,0)


        def getRuleIndex(self):
            return XalangParser.RULE_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_def" ):
                listener.enterVar_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_def" ):
                listener.exitVar_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_def" ):
                return visitor.visitVar_def(self)
            else:
                return visitor.visitChildren(self)




    def var_def(self):

        localctx = XalangParser.Var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.var_names()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_namesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_name_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XalangParser.Var_name_initContext)
            else:
                return self.getTypedRuleContext(XalangParser.Var_name_initContext,i)


        def getRuleIndex(self):
            return XalangParser.RULE_var_names

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_names" ):
                listener.enterVar_names(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_names" ):
                listener.exitVar_names(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_names" ):
                return visitor.visitVar_names(self)
            else:
                return visitor.visitChildren(self)




    def var_names(self):

        localctx = XalangParser.Var_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_names)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.var_name_init()
            self.state = 51
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 47
                    self.match(XalangParser.T__0)
                    self.state = 48
                    self.var_name_init() 
                self.state = 53
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_name_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XalangParser.RULE_var_name_init

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Var_createContext(Var_name_initContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Var_name_initContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Ident(self):
            return self.getToken(XalangParser.Ident, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_create" ):
                listener.enterVar_create(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_create" ):
                listener.exitVar_create(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_create" ):
                return visitor.visitVar_create(self)
            else:
                return visitor.visitChildren(self)


    class Var_create_assignContext(Var_name_initContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Var_name_initContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Ident(self):
            return self.getToken(XalangParser.Ident, 0)
        def expression(self):
            return self.getTypedRuleContext(XalangParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_create_assign" ):
                listener.enterVar_create_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_create_assign" ):
                listener.exitVar_create_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_create_assign" ):
                return visitor.visitVar_create_assign(self)
            else:
                return visitor.visitChildren(self)


    class Var_array_createContext(Var_name_initContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Var_name_initContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Ident(self):
            return self.getToken(XalangParser.Ident, 0)
        def IntLiteral(self):
            return self.getToken(XalangParser.IntLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_array_create" ):
                listener.enterVar_array_create(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_array_create" ):
                listener.exitVar_array_create(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_array_create" ):
                return visitor.visitVar_array_create(self)
            else:
                return visitor.visitChildren(self)



    def var_name_init(self):

        localctx = XalangParser.Var_name_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_name_init)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = XalangParser.Var_createContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(XalangParser.Ident)
                pass

            elif la_ == 2:
                localctx = XalangParser.Var_array_createContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(XalangParser.Ident)
                self.state = 56
                self.match(XalangParser.T__1)
                self.state = 57
                self.match(XalangParser.IntLiteral)
                self.state = 58
                self.match(XalangParser.T__2)
                pass

            elif la_ == 3:
                localctx = XalangParser.Var_create_assignContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.match(XalangParser.Ident)
                self.state = 60
                self.match(XalangParser.T__3)
                self.state = 61
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Operator_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XalangParser.RULE_operator_rule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Op_rule_expressionContext(Operator_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Operator_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(XalangParser.ExpressionContext,0)

        def Semicolon(self):
            return self.getToken(XalangParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_rule_expression" ):
                listener.enterOp_rule_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_rule_expression" ):
                listener.exitOp_rule_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_rule_expression" ):
                return visitor.visitOp_rule_expression(self)
            else:
                return visitor.visitChildren(self)


    class Op_rule_forContext(Operator_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Operator_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def for_op(self):
            return self.getTypedRuleContext(XalangParser.For_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_rule_for" ):
                listener.enterOp_rule_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_rule_for" ):
                listener.exitOp_rule_for(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_rule_for" ):
                return visitor.visitOp_rule_for(self)
            else:
                return visitor.visitChildren(self)


    class Op_rule_ifContext(Operator_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Operator_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_op(self):
            return self.getTypedRuleContext(XalangParser.If_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_rule_if" ):
                listener.enterOp_rule_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_rule_if" ):
                listener.exitOp_rule_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_rule_if" ):
                return visitor.visitOp_rule_if(self)
            else:
                return visitor.visitChildren(self)


    class Op_rule_printContext(Operator_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Operator_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_op(self):
            return self.getTypedRuleContext(XalangParser.Print_opContext,0)

        def Semicolon(self):
            return self.getToken(XalangParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_rule_print" ):
                listener.enterOp_rule_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_rule_print" ):
                listener.exitOp_rule_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_rule_print" ):
                return visitor.visitOp_rule_print(self)
            else:
                return visitor.visitChildren(self)


    class Op_rule_whileContext(Operator_ruleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.Operator_ruleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_op(self):
            return self.getTypedRuleContext(XalangParser.While_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_rule_while" ):
                listener.enterOp_rule_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_rule_while" ):
                listener.exitOp_rule_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_rule_while" ):
                return visitor.visitOp_rule_while(self)
            else:
                return visitor.visitChildren(self)



    def operator_rule(self):

        localctx = XalangParser.Operator_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operator_rule)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XalangParser.T__5, XalangParser.T__14, XalangParser.T__15, XalangParser.T__16, XalangParser.T__17, XalangParser.T__18, XalangParser.Ident, XalangParser.IntLiteral, XalangParser.BoolLiteral, XalangParser.StringLiteral]:
                localctx = XalangParser.Op_rule_expressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.expression(0)
                self.state = 65
                self.match(XalangParser.Semicolon)
                pass
            elif token in [XalangParser.T__4]:
                localctx = XalangParser.Op_rule_printContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.print_op()
                self.state = 68
                self.match(XalangParser.Semicolon)
                pass
            elif token in [XalangParser.T__7]:
                localctx = XalangParser.Op_rule_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.if_op()
                pass
            elif token in [XalangParser.T__12]:
                localctx = XalangParser.Op_rule_forContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.for_op()
                pass
            elif token in [XalangParser.T__13]:
                localctx = XalangParser.Op_rule_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.while_op()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_operatorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def for_operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XalangParser.For_operatorContext)
            else:
                return self.getTypedRuleContext(XalangParser.For_operatorContext,i)


        def getRuleIndex(self):
            return XalangParser.RULE_for_operators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_operators" ):
                listener.enterFor_operators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_operators" ):
                listener.exitFor_operators(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_operators" ):
                return visitor.visitFor_operators(self)
            else:
                return visitor.visitChildren(self)




    def for_operators(self):

        localctx = XalangParser.For_operatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_operators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.for_operator()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XalangParser.T__0:
                self.state = 76
                self.match(XalangParser.T__0)
                self.state = 77
                self.for_operator()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return XalangParser.RULE_for_operator

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class For_var_createContext(For_operatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.For_operatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_def(self):
            return self.getTypedRuleContext(XalangParser.Var_defContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_var_create" ):
                listener.enterFor_var_create(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_var_create" ):
                listener.exitFor_var_create(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_var_create" ):
                return visitor.visitFor_var_create(self)
            else:
                return visitor.visitChildren(self)


    class For_expressionContext(For_operatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a XalangParser.For_operatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(XalangParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_expression" ):
                listener.enterFor_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_expression" ):
                listener.exitFor_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_expression" ):
                return visitor.visitFor_expression(self)
            else:
                return visitor.visitChildren(self)



    def for_operator(self):

        localctx = XalangParser.For_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_operator)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = XalangParser.For_var_createContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.var_def()
                pass

            elif la_ == 2:
                localctx = XalangParser.For_expressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XalangParser.Code_instructionContext)
            else:
                return self.getTypedRuleContext(XalangParser.Code_instructionContext,i)


        def getRuleIndex(self):
            return XalangParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_block" ):
                return visitor.visitCode_block(self)
            else:
                return visitor.visitChildren(self)




    def code_block(self):

        localctx = XalangParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_code_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << XalangParser.T__4) | (1 << XalangParser.T__5) | (1 << XalangParser.T__7) | (1 << XalangParser.T__12) | (1 << XalangParser.T__13) | (1 << XalangParser.T__14) | (1 << XalangParser.T__15) | (1 << XalangParser.T__16) | (1 << XalangParser.T__17) | (1 << XalangParser.T__18) | (1 << XalangParser.Ident) | (1 << XalangParser.IntLiteral) | (1 << XalangParser.BoolLiteral) | (1 << XalangParser.StringLiteral))) != 0):
                self.state = 87
                self.code_instruction()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(XalangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return XalangParser.RULE_print_op
